--- a/Secondary.css
+++ b/Secondary.css
@@ -7,13 +7,13 @@ h1{
 text-align: center;
 }
 body{
-  background-color: #796842;
+  background-color: #913a18;
   overflow-x: hidden;
 }
 
 
 .card{
-  background-color: #796842;
+  background-color: #913a18;
   border-width: 0px;
 }
 
